Fix carousel issue; message before carousel is now visible

--- a/rich-message-plugin/CustomEvents_AddButtons_Stylesheet.css
+++ b/rich-message-plugin/CustomEvents_AddButtons_Stylesheet.css
@@ -128,7 +128,7 @@ p {
 .messageArea .ultimate-btn-container {
   padding: 12px 16px 16px;
   box-sizing: border-box;
-  width: 300px;
+  max-width: 300px;
 }
 
 .messageArea .ultimate-btn-container .ultimate-btn:disabled {
@@ -141,8 +141,7 @@ p {
 
 .embeddedServiceSidebar.layout-docked
   .embeddedServiceLiveAgentStateChatItem.agent
-  .chatContent,
-.embeddedServiceSidebar.layout-docked
+  .chatContent, .embeddedServiceSidebar.layout-docked
   .embeddedServiceLiveAgentStateChatItem.agent
   .chatContent.chatContent-custom-element {
   background-color: inherit !important;
@@ -171,14 +170,6 @@ p {
 }
 
 /* bot answer */
-.hasImage {
-  width: 50% !important;
-}
-
-.chatContent .agent iframe {
-  max-width: 99%;
-  height: 200px;
-}
 
 .chatContent .agent {
   background: #f9f9fb !important;
@@ -195,7 +186,6 @@ p {
   font-size: 13px;
   line-height: 16px;
   color: #15142d;
-  white-space: normal;
 }
 
 .chatContent .agent span .btn-default {
@@ -1072,8 +1062,6 @@ p {
   font-size: 11.5px;
   line-height: 16px;
   color: #6c6f85;
-  display: flex;
-  flex-direction: column;
 }
 
 .ultimate-custom-card-buttons {
